Fix various spacing or color issues

--- a/client/views/home/home.import.less
+++ b/client/views/home/home.import.less
@@ -43,9 +43,9 @@ body {
 
 section {
   padding-top: 100px;
-  padding-bottom: 150px;
+  padding-bottom: 100px;
   &.colored {
-   background: #2CB7E6;
+   background: @home-colored-section-bg;
    color: @home-colored-section-color;
   }
   &.semi-white {
