--- a/client/views/sponsors/sponsors.import.less
+++ b/client/views/sponsors/sponsors.import.less
@@ -47,7 +47,6 @@
 
 	#sponsor-logos {
 		margin: 20px;
-		padding-bottom: 40px;
 		max-height: 100px;
 	}
 
@@ -56,7 +55,7 @@
 	}
 
 	.sponsor-title {
-		margin-top: 20px;
+		margin-top: 40px;
 	}
 
 	#sponsor-header {
