--- a/client/views/team/team.import.less
+++ b/client/views/team/team.import.less
@@ -3,6 +3,7 @@
 #team {
   h2 {
     color: white;
+    margin-top: 0px;
   }
 
   .flex-container {
@@ -25,9 +26,6 @@
   .flex-item {
     padding: 5px;
     width: 200px;
-    height: 150px;
-    margin-top: 90px;
-    margin-bottom: 90px;
     margin-left: 10px;
     margin-right: 10px;
     text-align: center;
